# book-store

./: .gitignore  README.md  example.env  pyproject.toml  tutorial_cmd.txt
.github/workflows/: django.yml
book_outlet/: admin.py  models.py  urls.py  views.py
book_outlet/migrations/: 0001_initial.py  0002_book_author_book_is_bestselling_alter_book_rating.py  0003_book_slug.py  0004_author_alter_book_slug_alter_book_author.py  0005_alter_book_author.py  0006_address_author_address.py  0007_country_alter_address_options_and_more.py  0008_alter_country_code.py  0009_alter_country_options_alter_book_published_countries.py  0010_alter_book_published_countries.py
book_outlet/templates/book_outlet/: base.html  book_detail.html  index.html
book_store/: settings.py  urls.py
tests/: test_book_store.py
