[tool.poetry]
name = "book-store"
version = "0.1.0"
description = ""
authors = ["difegam <difegam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
yapf = "^0.33.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
